--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "5.0.2",
     "calendar-link": "^2.1.1",
+    "joi": "^17.4.2",
     "pure-react-carousel": "^1.27.6",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-beta.4",
+    "react-date-picker": "^8.3.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
-    "react-multi-carousel": "^2.6.3",
     "react-responsive": "^9.0.0-beta.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
