--- a/package.json
+++ b/package.json
@@ -6,9 +6,23 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@web3-react/authereum-connector": "^6.2.0",
+    "@web3-react/fortmatic-connector": "^6.1.6",
+    "@web3-react/frame-connector": "^6.0.9",
+    "@web3-react/injected-connector": "^6.0.7",
+    "@web3-react/ledger-connector": "^6.1.9",
+    "@web3-react/portis-connector": "^6.1.9",
+    "@web3-react/squarelink-connector": "^6.1.9",
+    "@web3-react/torus-connector": "^6.1.9",
+    "@web3-react/trezor-connector": "^6.1.9",
+    "@web3-react/walletconnect-connector": "^6.2.4",
+    "@web3-react/walletlink-connector": "^6.2.3",
     "bootstrap": "5.0.2",
     "calendar-link": "^2.1.1",
+    "flux": "^4.0.1",
     "joi": "^17.4.2",
+    "moment": "^2.29.1",
+    "opensea-js": "^1.1.12",
     "pure-react-carousel": "^1.27.6",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
@@ -19,6 +33,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
+    "request-promise": "^4.2.6",
+    "sass": "^1.38.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
