--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@web3-react/trezor-connector": "^6.1.9",
     "@web3-react/walletconnect-connector": "^6.2.4",
     "@web3-react/walletlink-connector": "^6.2.3",
+    "api": "^3.3.0",
     "bootstrap": "5.0.2",
     "calendar-link": "^2.1.1",
     "flux": "^4.0.1",
@@ -37,8 +38,10 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
+    "react-slick": "^0.28.1",
     "request-promise": "^4.2.6",
     "sass": "^1.38.0",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
