--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "bootstrap": "5.0.2",
     "calendar-link": "^2.1.1",
     "flux": "^4.0.1",
+    "human-date": "^1.4.0",
     "joi": "^17.4.2",
+    "millify": "^4.0.0",
     "moment": "^2.29.1",
     "opensea-js": "^1.1.12",
     "pure-react-carousel": "^1.27.6",
