--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-date-picker": "^8.3.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-intersection-observer": "^8.32.0",
     "react-responsive": "^9.0.0-beta.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
