search resuts page design

--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@web3-react/walletconnect-connector": "^6.2.4",
     "@web3-react/walletlink-connector": "^6.2.3",
     "api": "^3.3.0",
+    "axios": "^0.21.4",
     "bootstrap": "5.0.2",
     "calendar-link": "^2.1.1",
     "flux": "^4.0.1",
     "human-date": "^1.4.0",
     "joi": "^17.4.2",
+    "lodash.debounce": "^4.0.8",
     "millify": "^4.0.0",
     "moment": "^2.29.1",
     "opensea-js": "^1.1.12",
