--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "request-promise": "^4.2.6",
     "sass": "^1.38.0",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.1",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
