--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-indiana-drag-scroll": "^2.0.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-intersection-observer": "^8.32.0",
     "react-responsive": "^9.0.0-beta.3",
     "react-router-dom": "^5.2.0",
