--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@ethersproject/providers": "^5.4.4",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@mierak/react-virtualized-grid": "^0.0.5-ALPHA",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -42,11 +43,16 @@
     "react-indiana-drag-scroll": "^2.0.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-intersection-observer": "^8.32.0",
+    "react-loading-skeleton": "^2.2.0",
+    "react-markdown": "^7.0.1",
+    "react-paginate": "^7.1.3",
     "react-responsive": "^9.0.0-beta.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.1",
     "react-slick": "^0.28.1",
+    "react-virtualized": "^9.22.3",
+    "react-window": "^1.8.6",
     "request-promise": "^4.2.6",
     "sass": "^1.38.0",
     "slick-carousel": "^1.8.1",
