--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "pure-react-carousel": "^1.27.6",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
+    "react-burger-menu": "^3.0.6",
     "react-data-table-component": "^6.11.8",
     "react-date-picker": "^8.3.2",
     "react-dom": "^17.0.2",
