--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-data-table-component": "^6.11.8",
     "react-date-picker": "^8.3.2",
     "react-dom": "^17.0.2",
+    "react-fast-marquee": "^1.2.1",
     "react-icons": "^4.2.0",
     "react-indiana-drag-scroll": "^2.0.1",
     "react-infinite-scroll-component": "^6.1.0",
