--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 
 # production
 /build
+/dist
 
 # misc
 .DS_Store
@@ -18,8 +19,10 @@
 .env.test.local
 .env.production.local
 
+package-lock.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .vscode/
 front.zip
+.parcel-cache/
