--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "start": "parcel ./public/index.html -p 3001",
     "build": "parcel build ./public/index.html --dist-dir='../api/public'",
     "build:admin": "parcel build ./src/admin/index.tsx --dist-dir='../api/admin'",
+    "build:all": "yarn build:admin; yarn build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
