--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     ]
   },
   "devDependencies": {
+    "@types/ramda": "^0.27.56",
     "@types/react-dom": "^17.0.11",
     "typescript": "^4.5.2"
   }
