--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "flux": "^4.0.1",
     "formik": "^2.2.9",
     "human-date": "^1.4.0",
+    "immutability-helper": "^3.1.1",
     "joi": "^17.4.2",
     "lodash.debounce": "^4.0.8",
     "millify": "^4.0.0",
