--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "axios": "^0.21.4",
     "bootstrap": "5.0.2",
     "calendar-link": "^2.1.1",
+    "flatted": "^3.2.4",
     "flux": "^4.0.1",
     "formik": "^2.2.9",
     "human-date": "^1.4.0",
@@ -54,6 +55,7 @@
     "react-loading-skeleton": "^2.2.0",
     "react-markdown": "^7.0.1",
     "react-paginate": "^7.1.3",
+    "react-redux": "^7.2.6",
     "react-responsive": "^9.0.0-beta.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -62,6 +64,9 @@
     "react-toastify": "^8.0.3",
     "react-virtualized": "^9.22.3",
     "react-window": "^1.8.6",
+    "redux": "^4.1.2",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1",
     "request-promise": "^4.2.6",
     "sass": "^1.38.0",
     "slick-carousel": "^1.8.1",
