--- a/package.json
+++ b/package.json
@@ -72,7 +72,9 @@
     "sass": "^1.38.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.1",
+    "ua-parser-js": "^1.0.2",
     "web-vitals": "^1.0.1",
+    "web3": "^1.7.0",
     "yup": "^0.32.10"
   },
   "scripts": {
