--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@ethersproject/providers": "^5.4.4",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@metamask/jazzicon": "^2.0.0",
     "@mierak/react-virtualized-grid": "^0.0.5-ALPHA",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
