--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ms.macro": "^2.0.0",
     "opensea-js": "^1.1.12",
     "pure-react-carousel": "^1.27.6",
+    "query-string": "^7.1.0",
     "ramda": "^0.27.1",
     "rc-slider": "^9.7.4",
     "react": "^17.0.2",
